[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/scn/Intro_interface.gd" type="Script" id=1]

[node name="Intro_interface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 437.0
margin_top = 244.0
margin_right = 587.0
margin_bottom = 356.0

[node name="IP_section" type="LineEdit" parent="CenterContainer/VBoxContainer"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 30 )
align = 1
max_length = 15
placeholder_text = "Insert IP"

[node name="door_section" type="LineEdit" parent="CenterContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 150.0
margin_bottom = 64.0
rect_min_size = Vector2( 150, 30 )
align = 1
max_length = 15
placeholder_text = "Insert Door"

[node name="Connect_Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 150.0
margin_bottom = 88.0
text = "Connect"

[node name="Warning" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 150.0
margin_bottom = 112.0
rect_min_size = Vector2( 150, 20 )
align = 1
valign = 1

[connection signal="pressed" from="CenterContainer/VBoxContainer/Connect_Button" to="." method="_on_Connect_Button_pressed"]
